tests/ui/feature-gates/feature-gate-keylocker_x86.stderr
error[E0658]: the target feature `kl` is currently unstable
  --> $DIR/feature-gate-keylocker_x86.rs:2:18
   |
LL | #[target_feature(enable = "kl")]
   |                  ^^^^^^^^^^^^^
   |
   = note: see issue #134813 <https://github.com/rust-lang/rust/issues/134813> for more information
   = help: add `#![feature(keylocker_x86)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
