tests/ui/feature-gates/feature-gate-keylocker_x86.rs
//@ only-x86_64
#[target_feature(enable = "kl")]
//~^ ERROR: currently unstable
unsafe fn foo() {}

fn main() {}
